--- a/sass/components/main/_peculiarities.scss
+++ b/sass/components/main/_peculiarities.scss
@@ -17,6 +17,20 @@
   text-align: left;
   font-size: 1.4rem;
   letter-spacing: 0.03em;
+
+  &:hover,
+  &:focus {
+    cursor: pointer;
+
+    .peculiarities__icon-card {
+      background-color: $font-accent-color;
+    }
+
+    .peculiarities__icon {
+      color: red;
+      fill: #c0ecff;
+    }
+  }
 }
 
 .peculiarities__icon-card {
@@ -28,12 +42,18 @@
 
   background-color: $background-light-color;
   border-radius: 0.4rem;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .peculiarities__icon {
   @extend %svg;
   width: 7rem;
   height: 7rem;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .peculiarities__title {
