reset all styles

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,21 +1,5 @@
 // default
-@import "./components/visually-hidden";
 @import "./utils/variables";
+@import "./utils/visually-hidden";
 @import "./utils/common";
-@import "./components/main/buttons";
 
-
-@import "./components/logo";
-
-@import "./components/header";
-
-@import "./components/main/backdrop";
-@import "./components/main/form";
-@import "./components/main/section";
-@import "./components/main/peculiarities";
-@import "./components/main/our-works";
-@import "./components/main/our-team";
-@import "./components/main/our-clients";
-@import "./components/main/portfolio";
-
-@import "./components/footer";
