--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -5,6 +5,7 @@ html {
 
 body {
   font-size: $main-font-size;
+  line-height: 1.714;
   color: $font-main-color;
   position: relative;
 }
@@ -15,22 +16,19 @@ img {
   height: auto;
 }
 
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-
-  .overlay {
-    transform: translate(-50%, -50%) scale(0);
-  }
+address {
+  font-style: inherit;
 }
 
 %svg {
   display: inline-block;
+  vertical-align: middle;
+  text-align: center;
 }
 
 %container {
-  max-width: 1200px;
+  max-width: 120rem;
+  min-width: 32rem;
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -41,8 +39,6 @@ img {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 %link {
@@ -52,83 +48,13 @@ img {
 }
 
 %button {
+  text-align: center;
+  vertical-align: middle;
   display: inline-block;
   cursor: pointer;
-  border: none;
+  border: 0.1rem solid transparent;
   color: inherit;
   text-transform: none;
   background: transparent;
 }
 
-.container {
-  @extend %container;
-}
-
-.container--flex {
-  display: flex;
-}
-
-.social-link {
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  width: 4.4rem;
-  height: 4.4rem;
-  border-radius: 50%;
-  overflow: hidden;
-
-  &:hover::before,
-  &:focus::before {
-    opacity: 1;
-  }
-
-  &:hover > .icon,
-  &:focus > .icon {
-    fill: $font-light-color;
-  }
-
-  &:hover > .icon,
-  &:focus > .icon {
-    fill: $font-light-color;
-  }
-}
-
-.social-link--dark {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.social-link--dark::before,
-.social-link::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-
-  background-color: $font-accent-color;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon {
-  display: block;
-  width: 2rem;
-  height: 2rem;
-  align-content: center;
-
-  z-index: 1;
-
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon--light {
-  fill: $foreground-icon-color;
-}
-
-.icon--dark {
-  fill: $font-light-color;
-}
