--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,18 +1,20 @@
-$white-color: #fff;
-$black-color: #000;
+$white-color: #ffffff;
+$black-color: #000000;
 
 $font-main-color: #757575;
+
 $font-light-color: $white-color;
 $font-dark-color: $black-color;
+
+$font-accent-secondary-color: #212121;
+
 $font-accent-color: #2196f3;
 $font-accent-color-dark: #188ce8;
-$font-accent-secondary-color: #212121;
 
 $background-dark-color: #2f303a;
 $background-light-color: #f5f4fa;
 
 $foreground-icon-color: #afb1b8;
-
 $header-border-bottom: #ececec;
 
 $main-font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -20,5 +22,5 @@ $accent-font-family: 'Raleway', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 
 $main-font-size: 1.6rem;
-
+$line-height: 1;
 $btn-border-radius: calc($main-font-size / 4);
