--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -25,6 +25,18 @@
 
 .button__burger-menu {
     margin-left: auto;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    &:hover,
+    &:focus {
+        fill: $font-accent-color;
+    }
+
+    @media screen and (min-width: 48rem){
+        display: none;
+    }
 }
 
 .button__burger-close {
@@ -32,6 +44,14 @@
     position: absolute;
     right: 1.5rem;
     top: 1rem;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    &:hover,
+    &:focus {
+        fill: $font-accent-color;
+    }
 }
 
 .button__secondary {
