--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -9,3 +9,10 @@
     width: 1.8rem;
     height: 1.8rem;
 }
+
+.contacts__icon {
+    display: inline-block;
+    width: 1.4rem;
+    height: 1.4rem;
+    vertical-align: middle;
+}
