--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,112 @@
+.header {
+    border-bottom: 1px solid $header-border-bottom;
+}
+
 .header__container {
     display: flex;
     align-items: center;
 }
 
 .nav__wrapper {
-    @media screen and (max-width: 48rem) {
+    @media screen and (max-width: 47.9rem) {
         display: none;
+    }
+
+    display: flex;
+    flex-grow: 1;
+
+}
+
+.nav {
+    @extend %list;
+    display: flex;
+    margin-right: -2.5rem;
+    margin-left: -2.5rem;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.14285;
+    letter-spacing: 0.02em;
+    color: $font-accent-secondary-color;
+
+
+}
+
+.nav__item {
+    margin-right: 2.5rem;
+    margin-left: 2.5rem;
+}
+
+.nav__link {
+    display: block;
+    padding-top: 3.2rem;
+    padding-bottom: 3.2rem;
+
+    position: relative;
+
+    text-decoration: none;
+    color: inherit;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &--current,
+    &:hover,
+    &:focus {
+        color: $font-accent-color;
+    }
+
+    &--current::after,
+    &::after {
+        content: '';
+        display: block;
+        border-radius: 0.2rem;
+        height: 0.4rem;
+        width: 100%;
+        position: absolute;
+        bottom: -0.1rem;
+        left: 0;
+        background-color: $font-accent-color;
+    }
+
+    &::after {
+        transform:  scaleX(0);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &--current::after,
+    &:hover::after,
+    &:focus::after {
+        transform:  scaleX(100%);
+    }
+
+}
+
+.contacts {
+    @extend %list;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    font-size: 1.2rem;
+    line-height: 1.1666;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    color: $font-main-color;
+}
+
+.contacts__link {
+    @extend %link;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: $font-accent-color;
+        fill: currentColor;
+    }
+}
+
+.contacts__item {
+    &:not(:last-child) {
+        margin-bottom: 1rem;
     }
 }
