--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-left: 4rem;
+    text-align: center;
+    padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-top: 4.8rem;
     padding-bottom: 4.8rem;
@@ -14,12 +15,16 @@
     background: $white-color;
     color: $font-accent-secondary-color;
     transform: translate(100%, 0);
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &.is-open {
         transform: translate(0%, 0%);
     }
 
+    @media screen and (min-width: 30rem) {
+        text-align: left;
+        padding-left: 4rem;
+    }
 
     @media screen and (min-width: 48rem){
         display: none;
@@ -45,6 +50,9 @@
     font-size: 4rem;
     line-height: 1.175;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
     &--active,
     &:hover,
@@ -75,6 +83,8 @@
 .mobile-contacts__link {
     text-decoration: none;
     color: $font-main-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
     &--active,
     &:hover,
