--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,39 +1,38 @@
 .page-section__hero {
+    font-family: $main-font-family;
     padding-top: 11.8rem;
     padding-bottom: 11.8rem;
     min-width: 32rem;
     max-width: 76.8rem;
-    font-size: 2rem;
-    font-weight: 900;
-    line-height: 1.615;
     text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    background-size: 38.4rem 32rem 100%;
+
+    background-size: 48rem 40rem 100%;
 
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url('../../images/hero/hero-our-company_480x400@1x.jpg');
-    // background-size: 48rem 40rem;
+
     background-repeat: no-repeat;
     background-position: center center;
 
-    @media screen and (min-width: 29.9rem) {
-        font-size: 2.6rem;
-        font-weight: 900;
-        padding-left: 4rem;
-        padding-right: 4rem;
-    }
-
-}
-
-.page-section--dark {
-  background-color: $background-dark-color;
-  color: $font-light-color;
 }
 
 .page-section__hero-title{
+    max-width: 36rem;
     margin-top: 0;
-    margin-bottom: 0;
-    font-size: inherit;
+    margin-bottom: 3rem;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
+    line-height: 1.615;
+    font-size: 2.6rem;
+    font-weight: 900;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    @media screen and (min-width: 75rem) {
+        max-width: 69.6rem;
+        font-size: 4.4rem;
+        line-height: 1.36;
+        /* or 136% */
+    }
 }
