--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -1,4 +1,8 @@
 @import "./header";
 @import "./mobile-menu";
 
+@import "./page_section";
 @import "./hero";
+@import "./peculiarities";
+@import "./our-works";
+@import "./our-team";
