--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ address {
   font-style: inherit;
 }
 
-.nav, .contacts, .mobile-nav__list {
+.nav, .contacts, .mobile-nav__list, .peculiarities {
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
@@ -122,15 +122,26 @@ address {
   background-color: transparent;
   fill: currentColor;
   cursor: pointer;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button__primary {
-  padding-top: 0;
-  padding-right: 0;
-  padding-bottom: 0;
-  padding-left: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 3.2rem;
+  padding-left: 3.2rem;
   color: #ffffff;
   background-color: #2196f3;
+  border-radius: 0.4rem;
+}
+
+.button__primary:hover, .button__primary:focus {
+  background: #188ce8;
+  -webkit-box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.15);
+          box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.15);
 }
 
 .button__burger-menu {
@@ -438,42 +449,124 @@ address {
   color: inherit;
 }
 
+.page-section--dark {
+  background-color: #2f303a;
+  color: #ffffff;
+}
+
+.page-section--darker {
+  background-color: #f5f4fa;
+}
+
+.page-section__title {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
 .page-section__hero {
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding-top: 11.8rem;
   padding-bottom: 11.8rem;
   min-width: 32rem;
   max-width: 76.8rem;
-  font-size: 2rem;
-  font-weight: 900;
-  line-height: 1.615;
   text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  background-size: 38.4rem 32rem 100%;
+  background-size: 48rem 40rem 100%;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_480x400@1x.jpg");
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_480x400@1x.jpg");
   background-repeat: no-repeat;
   background-position: center center;
 }
 
-@media screen and (min-width: 29.9rem) {
-  .page-section__hero {
-    font-size: 2.6rem;
-    font-weight: 900;
-    padding-left: 4rem;
-    padding-right: 4rem;
+.page-section__hero-title {
+  max-width: 36rem;
+  margin-top: 0;
+  margin-bottom: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 1.615;
+  font-size: 2.6rem;
+  font-weight: 900;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 75rem) {
+  .page-section__hero-title {
+    max-width: 69.6rem;
+    font-size: 4.4rem;
+    line-height: 1.36;
+    /* or 136% */
   }
 }
 
-.page-section--dark {
-  background-color: #2f303a;
-  color: #ffffff;
+.page-section__peculiarities {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
-.page-section__hero-title {
+@media screen and (max-width: 47.9rem) {
+  .peculiarities__item:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+
+.peculiarities__icon-card {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  border-radius: 0.4rem;
+  background-color: #f5f4fa;
+  color: #2196f3;
+}
+
+.peculiarities__icon {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 7rem;
+  height: 7rem;
+}
+
+.peculiarities__info {
+  padding-top: 3rem;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.peculiarities__title {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 1.1428;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+}
+
+.peculiarities__description {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: inherit;
-  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.4rem;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+@media screen and (max-width: 74.9rem) {
+  .page-section__our-works {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
