--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -11,16 +11,27 @@
     fill: currentColor;
 
     cursor: pointer;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button__primary {
-    padding-top: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-right: 3.2rem;
+    padding-left: 3.2rem;
     color: $font-light-color;
 
     background-color: $font-accent-color;
+    border-radius: 0.4rem;
+
+    &:hover,
+    &:focus {
+        background: $font-accent-color-dark;
+        box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.15);
+    }
 }
 
 .button__burger-menu {
