--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -16,3 +16,75 @@
     height: 1.4rem;
     vertical-align: middle;
 }
+
+.team-member-socials {
+    display: flex;
+
+}
+
+.socials-link {
+    display: inline-block;
+    width: 4.4rem;
+    height: 4.4rem;
+    vertical-align: middle;
+}
+
+.socials-icon {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    vertical-align: middle;
+    fill: $foreground-icon-color;
+}
+
+
+.icon-clients {
+    display: inline-block;
+    width: 10.6rem;
+    height: 6rem;
+    text-align: center;
+    vertical-align: middle;
+    fill: $foreground-icon-color;
+}
+
+.icon-clients--ya-company {
+    display: inline-block;
+    width: 4.4rem;
+    height: 4.9rem;
+    vertical-align: middle;
+}
+
+.icon-clients--company-group {
+    display: inline-block;
+    width: 4rem;
+    height: 5rem;
+    vertical-align: middle;
+}
+
+.icon-clients--oval-company-group {
+    display: inline-block;
+    width: 4.1rem;
+    height: 4.2rem;
+    vertical-align: middle;
+}
+
+.icon-clients--foster-peters-group {
+    display: inline-block;
+    width: 7.9rem;
+    height: 4.2rem;
+    vertical-align: middle;
+}
+
+.icon-clients--brand-group {
+    display: inline-block;
+    width: 5.9rem;
+    height: 4.7rem;
+    vertical-align: middle;
+}
+
+.icon-clients--box-company-group {
+    display: inline-block;
+    width: 8.8rem;
+    height: 4.5rem;
+    vertical-align: middle;
+}
