--- a/sass/layout/_page_section.scss
+++ b/sass/layout/_page_section.scss
@@ -1,3 +1,8 @@
+.page-section {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .page-section--dark {
   background-color: $background-dark-color;
   color: $font-light-color;
@@ -10,7 +15,7 @@
 .page-section__title {
     margin-top: 0;
     margin-bottom: 0;
-    font-family: $main;
+    font-family: $main-font-family;
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
