--- a/css/main.css
+++ b/css/main.css
@@ -556,7 +556,7 @@ address {
   min-width: 32rem;
   max-width: 76.8rem;
   text-align: center;
-  background-size: 48rem 40rem 100%;
+  background-size: 48rem 100%;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_480x400@1x.jpg");
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_480x400@1x.jpg");
   background-repeat: no-repeat;
