--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,7 +6,7 @@
     max-width: 76.8rem;
     text-align: center;
 
-    background-size: 48rem 40rem 100%;
+    background-size: 48rem 100%;
 
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url('../../images/hero/hero-our-company_480x400@1x.jpg');
