--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,13 @@ address {
   font-style: inherit;
 }
 
-.nav, .contacts, .mobile-nav__list, .peculiarities, .our-team, .team-member-socials, .clients {
+.contacts__icon, .socials-link, .socials-icon, .icon-clients, .icon-clients--ya-company, .icon-clients--company-group, .icon-clients--oval-company-group, .icon-clients--foster-peters-group, .icon-clients--brand-group, .icon-clients--box-company-group, .icon--send-mail {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.nav, .contacts, .mobile-nav__list, .peculiarities, .our-team, .team-member-socials, .clients, .studio-socials {
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
@@ -90,6 +96,10 @@ address {
   padding-bottom: 1.5rem;
 }
 
+.webstudio-logo--mb {
+  margin-bottom: 2rem;
+}
+
 .burger-menu__icon {
   display: block;
   width: 4rem;
@@ -103,10 +113,8 @@ address {
 }
 
 .contacts__icon {
-  display: inline-block;
   width: 1.4rem;
   height: 1.4rem;
-  vertical-align: middle;
 }
 
 .team-member-socials {
@@ -116,69 +124,66 @@ address {
 }
 
 .socials-link {
-  display: inline-block;
   width: 4.4rem;
   height: 4.4rem;
-  vertical-align: middle;
 }
 
 .socials-icon {
-  display: inline-block;
   width: 2rem;
   height: 2rem;
-  vertical-align: middle;
+}
+
+.socials-icon--dark {
   fill: #afb1b8;
 }
 
+.socials-icon--light {
+  fill: #ffffff;
+}
+
 .icon-clients {
-  display: inline-block;
   width: 10.6rem;
   height: 6rem;
-  text-align: center;
-  vertical-align: middle;
   fill: #afb1b8;
 }
 
 .icon-clients--ya-company {
-  display: inline-block;
   width: 4.4rem;
   height: 4.9rem;
-  vertical-align: middle;
 }
 
 .icon-clients--company-group {
-  display: inline-block;
   width: 4rem;
   height: 5rem;
-  vertical-align: middle;
 }
 
 .icon-clients--oval-company-group {
-  display: inline-block;
   width: 4.1rem;
   height: 4.2rem;
-  vertical-align: middle;
 }
 
 .icon-clients--foster-peters-group {
-  display: inline-block;
   width: 7.9rem;
   height: 4.2rem;
-  vertical-align: middle;
 }
 
 .icon-clients--brand-group {
-  display: inline-block;
   width: 5.9rem;
   height: 4.7rem;
-  vertical-align: middle;
 }
 
 .icon-clients--box-company-group {
-  display: inline-block;
   width: 8.8rem;
   height: 4.5rem;
-  vertical-align: middle;
+}
+
+.icon--send-mail {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.icon--ml {
+  margin-left: 1rem;
 }
 
 .button {
@@ -201,10 +206,6 @@ address {
 }
 
 .button__primary {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-right: 3.2rem;
-  padding-left: 3.2rem;
   color: #ffffff;
   background-color: #2196f3;
   border-radius: 0.4rem;
@@ -214,6 +215,20 @@ address {
   background: #188ce8;
   -webkit-box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.15);
           box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.15);
+}
+
+.button__primary--hero {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 3.2rem;
+  padding-left: 3.2rem;
+}
+
+.button__primary--send {
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  padding-right: 2.8rem;
+  padding-left: 2.8rem;
 }
 
 .button__burger-menu {
@@ -363,6 +378,10 @@ address {
 
 .contacts__item:not(:last-child) {
   margin-bottom: 1rem;
+}
+
+.contacts__item--footer:not(:last-child) {
+  margin-bottom: 0.8rem;
 }
 
 .mobile-menu {
@@ -537,7 +556,7 @@ address {
 
 .page-section__title {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 3rem;
   font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -642,21 +661,68 @@ address {
   }
 }
 
+.our-team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: -1.5rem;
+  margin-bottom: -1.5rem;
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
+}
+
+.our-team__item {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .team-member {
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
+  background: #ffffff;
+  -webkit-box-shadow: 0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12), 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14), 0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12), 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14), 0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+  border-radius: 0rem 0rem 0.4rem 0.4rem;
+}
+
+.team-member__info {
+  padding-top: 3rem;
+  padding-bottom: 2.4rem;
+  line-height: 1.1875;
+  font-size: 1.6rem;
+  letter-spacing: 0.03em;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .team-member__name {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: #212121;
+  font-weight: 500;
 }
 
 .team-member__position {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 1.6rem;
+  text-align: center;
+}
+
+.team-member-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .clients {
@@ -674,6 +740,9 @@ address {
 .clients__item {
   -ms-flex-preferred-size: calc(50% - 1.5rem*4);
       flex-basis: calc(50% - 1.5rem*4);
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   margin-top: 1.5rem;
   margin-right: 1.5rem;
   margin-bottom: 1.5rem;
@@ -689,5 +758,51 @@ address {
   border: 0.1rem solid #afb1b8;
   border-radius: 0.4rem;
   text-align: center;
+}
+
+.footer-block + .footer-block {
+  margin-top: 6rem;
+}
+
+.footer-block--address {
+  text-align: center;
+}
+
+.footer-address {
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.4rem;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.footer-address__text {
+  display: inline-block;
+  margin-bottom: 0.8rem;
+}
+
+.studio-socials__title {
+  margin-top: 0;
+  margin-bottom: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.studio-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=main.css.map */
