--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -18,10 +18,6 @@
 }
 
 .button__primary {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-right: 3.2rem;
-    padding-left: 3.2rem;
     color: $font-light-color;
 
     background-color: $font-accent-color;
@@ -32,6 +28,20 @@
         background: $font-accent-color-dark;
         box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.15);
     }
+}
+
+.button__primary--hero {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-right: 3.2rem;
+    padding-left: 3.2rem;
+}
+
+.button__primary--send {
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+    padding-right: 2.8rem;
+    padding-left: 2.8rem;
 }
 
 .button__burger-menu {
