--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,5 +1,18 @@
 .our-team {
     @extend %list;
+    display: flex;
+    flex-direction: column;
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+}
+
+.our-team__item {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 .team-member {
@@ -7,18 +20,38 @@
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
+    background: $font-light-color;
+    box-shadow: 0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12),
+                0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14),
+                0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+    border-radius: 0rem 0rem 0.4rem 0.4rem;
+}
+
+.team-member__info {
+    padding-top: 3rem;
+    padding-bottom: 2.4rem;
+    line-height: 1.1875;
+    font-size: 1.6rem;
+    letter-spacing: 0.03em;
+    font-family: $main-font-family;
 }
 
 .team-member__name {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
+    text-align: center;
+    color: $font-accent-secondary-color;
+    font-weight: 500;
 }
 
 .team-member__position {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 1.6rem;
+    text-align: center;
 }
 
 .team-member-socials {
     @extend %list;
+    display: flex;
+    justify-content: center;
 }
