--- a/sass/layout/_page_section.scss
+++ b/sass/layout/_page_section.scss
@@ -14,7 +14,7 @@
 
 .page-section__title {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 3rem;
     font-family: $main-font-family;
     font-style: normal;
     font-weight: bold;
