--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -55,3 +55,9 @@
     display: flex;
     justify-content: center;
 }
+
+.team-member-socials__item {
+    & + & {
+        margin-left: 1rem;
+    }
+}
