add some styles

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -95,4 +95,14 @@
 
 .socials-link--dark {
     background: rgba(255, 255, 255, 0.1);
+
+    &:hover,
+    &:focus {
+        background-color: $font-accent-color;
+
+        .socials-icon {
+            color: $font-light-color;
+            fill: $font-light-color;
+        }
+    }
 }
