--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -112,6 +112,13 @@
 }
 
 .contacts__item--footer {
+    font-size: 1.4rem;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+    font-weight: normal;
+
     &:not(:last-child) {
         margin-bottom: 0.8rem;
     }
