--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -7,5 +7,7 @@
 @import "./our-works";
 @import "./our-team";
 @import "./our-clients";
-@import "./footer"
+@import "./backdrop-container";
+@import "./form";
+@import "./footer";
 
