--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,17 @@ address {
   color: inherit;
 }
 
+.overlay__button {
+  text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  cursor: pointer;
+  border: 0.1rem solid transparent;
+  color: inherit;
+  text-transform: none;
+  background: transparent;
+}
+
 .container {
   min-width: 32rem;
   max-width: 120rem;
@@ -124,9 +135,10 @@ address {
 }
 
 .socials-link {
+  font-size: 1.4rem;
   width: 4.4rem;
   height: 4.4rem;
-  line-height: 4rem;
+  line-height: 4.4rem;
 }
 
 .socials-icon {
@@ -134,8 +146,8 @@ address {
   height: 2rem;
   color: #afb1b8;
   fill: currentColor;
-  -webkit-transition: fill 250s cubic-bezier(0.4, 0, 0.2, 1), color 250s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250s cubic-bezier(0.4, 0, 0.2, 1), color 250s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-icon--dark {
@@ -284,6 +296,15 @@ address {
   background: rgba(255, 255, 255, 0.1);
 }
 
+.socials-link--dark:hover, .socials-link--dark:focus {
+  background-color: #2196f3;
+}
+
+.socials-link--dark:hover .socials-icon, .socials-link--dark:focus .socials-icon {
+  color: #ffffff;
+  fill: #ffffff;
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -402,6 +423,14 @@ address {
 
 .contacts__item:not(:last-child) {
   margin-bottom: 1rem;
+}
+
+.contacts__item--footer {
+  font-size: 1.4rem;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: normal;
 }
 
 .contacts__item--footer:not(:last-child) {
@@ -766,8 +795,8 @@ address {
 }
 
 .clients__item {
-  -ms-flex-preferred-size: calc(50% - 1.5rem*4);
-      flex-basis: calc(50% - 1.5rem*4);
+  -ms-flex-preferred-size: calc(50% - 1.5rem * 4);
+      flex-basis: calc(50% - 1.5rem * 4);
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -786,17 +815,356 @@ address {
   border: 0.1rem solid #afb1b8;
   border-radius: 0.4rem;
   text-align: center;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-block + .footer-block {
-  margin-top: 6rem;
+.clients__link .icon-clients {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-block--address {
+.clients__link:hover, .clients__link:focus {
+  border-color: #2196f3;
+}
+
+.clients__link:hover .icon-clients, .clients__link:focus .icon-clients {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.backdrop-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 32rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  background: #ffffff;
+  -webkit-box-shadow: 0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12), 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14), 0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12), 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14), 0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+  border-radius: 0.4rem;
+  -webkit-transition: -webkit-transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay__button {
+  position: absolute;
+  padding: 0;
+  right: 0.8rem;
+  top: 0.8rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay__button .icon__close {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 1.1rem;
+  height: 1.1rem;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay__button:hover, .overlay__button:focus {
+  background: #f1fdff;
+  border: 1px solid #2196f3;
+}
+
+.overlay__button:hover .icon__close, .overlay__button:focus .icon__close {
+  fill: #2196f3;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.is-hidden .overlay {
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+}
+
+.form-input__inner, .form-input__textarea {
+  display: block;
+  width: 100%;
+  margin: 0;
+  font-family: inherit;
+  color: inherit;
+  background: transparent;
+  -webkit-filter: drop-shadow(0rem 4rem 4rem rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0rem 4rem 4rem rgba(0, 0, 0, 0.15));
+  border-radius: 0.4rem;
+  border: 0.1rem solid rgba(33, 33, 33, 0.2);
+  -webkit-transition: border cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input__label--text-footer {
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-weight: bold;
+  line-height: 3.1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+}
+
+.mail-form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.form-card {
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.form-card__title {
+  margin-top: 0;
+  margin-bottom: 1.2rem;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #212121;
   text-align: center;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
 }
 
-.footer-address {
+.form-input--mb1 {
+  margin-bottom: 1rem;
+}
+
+.form-input--mb2 {
+  margin-bottom: 2rem;
+}
+
+.form-input--mb3 {
+  margin-bottom: 3rem;
+}
+
+.form-input__label--text {
+  display: block;
+  margin-bottom: 0.4rem;
+  font-size: 1.2rem;
+  line-height: 1.167;
+}
+
+.form-input__label--footer {
+  min-width: 62.807%;
+  margin-right: 1.2rem;
+}
+
+.form-input__label--text-footer {
+  display: block;
+}
+
+.form-input__label--checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 3.6rem;
+  font-size: 1.4rem;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+}
+
+.form-input__label--checkbox-text + .label-link {
+  margin-left: 0.35rem;
+}
+
+.form-input__label {
+  display: block;
+  position: relative;
+}
+
+.form-input__inner {
+  padding-left: 4.2rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  padding-right: 16rem;
+  font-size: 1.2rem;
+  line-height: 1.167;
+}
+
+.form-input__inner--footer {
+  padding-left: 1.6rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-right: 1.6rem;
+  font-size: 1.6rem;
+  line-height: 1.15;
+  border: 0.1rem solid rgba(255, 255, 255, 0.3);
+}
+
+.form-input__inner:focus-within {
+  border-color: #2196f3;
+  outline: 0.1rem solid #2196f3;
+}
+
+.form-input__inner:focus-within + .form-input__icon {
+  fill: #2196f3;
+}
+
+.form-input__inner::-webkit-input-placeholder {
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 0.03em;
+}
+
+.form-input__inner:-ms-input-placeholder {
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 0.03em;
+}
+
+.form-input__inner::-ms-input-placeholder {
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 0.03em;
+}
+
+.form-input__inner::placeholder {
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 0.03em;
+}
+
+.form-input__inner--footer:not(:placeholder-shown) {
+  border: 1px solid #2196f3;
+}
+
+.form-input__icon {
+  position: absolute;
+  bottom: 1.1rem;
+  left: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1.8rem;
+  height: 1.8rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: #212121;
+}
+
+.form-input__icon--checkbox {
+  bottom: 50%;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  left: 1.3rem;
+  width: 1.6rem;
+  height: 1.6rem;
+  border: 0.2rem solid #212121;
+  border-radius: 0.2rem;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input__icon--checkbox .icon {
+  display: block;
+  width: 1.6rem;
+  height: 1.6rem;
+  fill: #ffffff;
+  background: #2196f3;
+  opacity: 0;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon--user {
+  display: block;
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
+.icon--phone {
+  display: block;
+  width: 1.3rem;
+  height: 1.3rem;
+}
+
+.icon--envelope {
+  display: block;
+  width: 1.5rem;
+  height: 1.2rem;
+}
+
+.form-input__textarea {
+  resize: none;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  font-size: 1.4rem;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+
+.form-input__textarea:focus-within {
+  border-color: #2196f3;
+  outline: 0.1rem solid #2196f3;
+}
+
+.checkbox:checked + .form-input__icon--checkbox .icon {
+  opacity: 1;
+}
+
+.checkbox:checked + .form-input__icon--checkbox {
+  border-color: #2196f3;
+}
+
+.checkbox-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.footer {
   font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -805,6 +1173,10 @@ address {
   text-align: center;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+.footer-block + .footer-block {
+  margin-top: 6rem;
 }
 
 .footer-address__text {
@@ -836,5 +1208,61 @@ address {
 
 .studio-socials__item + .studio-socials__item {
   margin-left: 0.9rem;
+}
+
+.mail-form {
+  text-align: center;
+}
+
+.form-input__label--footer {
+  display: block;
+  margin-bottom: 2rem;
+  cursor: pointer;
+}
+
+.form-input__label--footer:focus-within .form-input__inner {
+  border-color: #2196f3;
+  outline: 0.1rem solid #2196f3;
+}
+
+.form-input__label-text {
+  display: block;
+}
+
+.form-input__inner {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 1.5rem;
+  border: 0.1rem solid rgba(255, 255, 255, 0.3);
+  font-size: 1.6rem;
+  line-height: 1.25;
+  background: transparent;
+  color: #ffffff;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 0.4rem;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input__inner::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-input__inner:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-input__inner::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-input__inner::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-input__inner:not(:placeholder-shown) {
+  border-color: #2196f3;
 }
 /*# sourceMappingURL=main.css.map */
