--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -24,9 +24,10 @@
 
 .socials-link {
     @extend %svg;
+    font-size: 1.4rem;
     width: 4.4rem;
     height: 4.4rem;
-    line-height: 4rem;
+    line-height: 4.4rem;
 }
 
 
@@ -38,8 +39,8 @@
     color: $foreground-icon-color;
     fill: currentColor;
 
-    transition: fill 250s cubic-bezier(0.4, 0, 0.2, 1),
-                color 250s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
