--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -1,29 +1,45 @@
 .clients {
-    @extend %list;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -1.5rem;
-    margin-right: -1.5rem;
-    margin-bottom: -1.5rem;
-    margin-left: -1.5rem;
+  @extend %list;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -1.5rem;
+  margin-right: -1.5rem;
+  margin-bottom: -1.5rem;
+  margin-left: -1.5rem;
 }
 
 .clients__item {
-    flex-basis: calc(50% - 1.5rem*4);
-    flex-grow: 1;
-    margin-top: 1.5rem;
-    margin-right: 1.5rem;
-    margin-bottom: 1.5rem;
-    margin-left: 1.5rem;
+  flex-basis: calc(50% - 1.5rem * 4);
+  flex-grow: 1;
+  margin-top: 1.5rem;
+  margin-right: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .clients__link {
-    display: block;
-    padding-top: 1.5rem;
-    padding-left: 5.1rem;
-    padding-right: 5.1rem;
-    padding-bottom: 1.5rem;
-    border: 0.1rem solid $foreground-icon-color;
-    border-radius: 0.4rem;
-    text-align: center;
+  display: block;
+  padding-top: 1.5rem;
+  padding-left: 5.1rem;
+  padding-right: 5.1rem;
+  padding-bottom: 1.5rem;
+  border: 0.1rem solid $foreground-icon-color;
+  border-radius: 0.4rem;
+  text-align: center;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .icon-clients {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &:hover,
+  &:focus {
+    border-color: $font-accent-color;
+
+    .icon-clients {
+      color: $font-accent-color;
+      fill: $font-accent-color;
+    }
+  }
 }
