--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -106,3 +106,12 @@
         }
     }
 }
+
+.button--padding5 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 5.5rem;
+    padding-right: 5.5rem;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+}
