--- a/sass/layout/_backdrop-container.scss
+++ b/sass/layout/_backdrop-container.scss
@@ -12,8 +12,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 32rem;
-    // height: 58.1rem; 
+    min-width: 93.75%;
 
     padding-top: 4rem;
     padding-bottom: 4rem;
