fixed form layout

--- a/css/main.css
+++ b/css/main.css
@@ -1019,7 +1019,6 @@ address {
   font-size: 1.2rem;
   font-family: inherit;
   background: transparent;
-  color: #ffffff;
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 0.4rem;
@@ -1076,12 +1075,14 @@ address {
   letter-spacing: 0.03em;
 }
 
-.form-input__border-light {
+.form-input__light {
   border: 0.1rem solid rgba(33, 33, 33, 0.2);
+  color: #212121;
 }
 
-.form-input__border-dark {
+.form-input__dark {
   border: 0.1rem solid rgba(255, 255, 255, 0.3);
+  color: #ffffff;
 }
 
 .form-input__inner--footer {
@@ -1199,6 +1200,10 @@ address {
 
 .checkbox:checked + .form-input__icon--checkbox {
   border-color: #2196f3;
+}
+
+.label-link {
+  color: #2196f3;
 }
 
 .footer {
