--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -107,7 +107,7 @@
   font-size: 1.2rem;
   font-family: inherit;
   background: transparent;
-  color: $font-light-color;
+
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 0.4rem;
 
@@ -133,12 +133,14 @@
   }
 }
 
-.form-input__border-light {
+.form-input__light {
   border: 0.1rem solid rgba(33, 33, 33, 0.2);
+  color: $font-accent-secondary-color;
 }
 
-.form-input__border-dark {
+.form-input__dark {
   border: 0.1rem solid rgba(255, 255, 255, 0.3);
+  color: $font-light-color;
 }
 
 .form-input__inner--footer {
@@ -260,3 +262,6 @@
   border-color: $font-accent-color;
 }
 
+.label-link {
+  color: $font-accent-color;
+}
